# gen-experiments

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yaml
exp/: __init__.py  __main__.py  sho.py
gen_experiments/: __init__.py  __main__.py  cubic_oscillator.py  cubic_sho.py  hopf.py  lorenz.py  lorenz_missing.py  nonlinear_pendulum.py  sho.py  utils.py  vanderpol.py
scratch/: classes_and_types.py  good_kalman.py  heuristic-ts.py  new_heuristics.py  new_heuristics_run.py
src/gen_experiments/: .gitignore  __init__.py  __main__.py  config.py  data.py  debug.py  gridsearch.py  lorenz_missing.py  nonlinear_pendulum.py  odes.py  pdes.py  plotting.py  typing.py  utils.py  vanderpol.py  wrapper.py
src/gen_experiments/gridsearch/: __init__.py  typing.py
src/gen_experiments/trials/: .gitignore
tests/: test_all.py  test_gridsearch.py
