[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pysindy-experiments"
dynamic = ["version"]
description = "My general exam experiments"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["Machine Learning", "Science", "Mathematics", "Experiments"]
authors = [
  {email = "jacob.stevens.haas@gmail.com", name = "Jake Stevens-Haas"}
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Framework :: Jupyter",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
]
# Since the point of the package is reproducibility, incl. all dev
# dependencies
dependencies = [
  "mitosis >=0.4.0rc2",
  "derivative @ git+https://github.com/Jacob-Stevens-Haas/derivative@hyperparams",
  "pysindy[cvxpy,miosr] @ git+https://github.com/dynamicslab/pysindy@master",
  "kalman @ git+https://github.com/Jacob-Stevens-Haas/kalman@0.1.0",
  "auto_ks @ git+https://github.com/cvxgrp/auto_ks.git@e60bcc6",
  "pytest >= 6.0.0",
  "pytest-cov",
  "flake8",
  "flake8-comprehensions>=3.1.0",
  "matplotlib",
  "numpy >= 1.20.0",
  "black",
  "coverage",
  "isort",
  "pre-commit",
  "codecov",
  "seaborn",
  "sqlalchemy<2.0",
  "tomli",
]

[project.optional-dependencies]
dev = [
  "mypy",
]

[project.urls]
homepage = "https://github.com/Jake-Stevens-Haas/gen-experiments"

[project.entry-points.'derivative.hyperparam_opt']
"kalman.gcv" = "gen_experiments.utils:kalman_generalized_cv"

[tool.setuptools_scm]

[tool.black]
line-length = 88
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | .vscode
  | version.py
  | build
  | dist
  | scratch
  | env
)/
'''
preview = true

[tool.codespell]
skip = '*.html,./env,./scratch/*,todo'
ignore-words-list = "nd, aks, ser"

[tool.isort]
profile = "black"
src_paths = ["src/gen_experiments", "tests"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::RuntimeWarning",
  "ignore::UserWarning",]
addopts = '-m "not slow"'
markers = ["slow"]

[tool.mypy]
files = ["src/gen_experiments/__init__.py"]
