[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pysindy-experiments"
dynamic = ["version"]
description = "My general exam experiments"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["Machine Learning", "Science", "Mathematics", "Experiments"]
authors = [
  {email = "jacob.stevens.haas@gmail.com", name = "Jake Stevens-Haas"}
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Framework :: Jupyter",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "mitosis >=0.6.1",
  "kalman @ git+https://github.com/Jacob-Stevens-Haas/kalman@0.1.1",
  "auto_ks @ git+https://github.com/cvxgrp/auto_ks.git@e60bcc6",
  "matplotlib",
  "numpy >= 1.20.0",
  "seaborn",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest >= 6.0.0",
  "pytest-cov",
  "flake8",
  "flake8-comprehensions>=3.1.0",
  "black",
  "coverage",
  "isort",
  "pre-commit",
  "codecov",
  "tomli",
]

[project.urls]
homepage = "https://github.com/Jake-Stevens-Haas/gen-experiments"

[project.entry-points.'derivative.hyperparam_opt']
"kalman.gcv" = "gen_experiments.utils:kalman_generalized_cv"

[tool.setuptools_scm]

[tool.black]
line-length = 88
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | .vscode
  | version.py
  | build
  | dist
  | scratch
  | env
)/
'''
preview = true

[tool.codespell]
skip = '*.html,./env,./scratch/*,todo'
ignore-words-list = "nd, aks, ser"

[tool.isort]
profile = "black"
src_paths = ["src/gen_experiments", "tests"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::RuntimeWarning",
  "ignore::UserWarning",]
addopts = '-m "not slow"'
markers = ["slow"]

[tool.mypy]
files = [
  "src/gen_experiments/__init__.py",
  "src/gen_experiments/utils.py",
  "src/gen_experiments/gridsearch/typing.py",
  "tests/test_all.py",
  "tests/test_gridsearch.py",
]

[[tool.mypy.overrides]]
module="auto_ks.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="sklearn.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="pysindy.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="kalman.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="scipy.*"
ignore_missing_imports=true

[tool.mitosis.steps]
data = ["gen_experiments.data:gen_data", "gen_experiments.config:no_dict"]
